--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,98 @@
 # Flow of the pipeline
 # 1. Build stage will build the docker image
-# 2. 
+# 2. Run Terraform plan
+# 3. Run Terraform apply.
+
+.ssh: &ssh-common
+  before_script:
+    - mkdir -p ~/.ssh
+    - eval `ssh-agent -s`
+    - echo $SSH_KNOWN_HOSTS > ~/.ssh/known_hosts
+    - ssh-add - <<< "$SSH_PRIVATE_KEY"
+
+.npm_setup: &npm_setup
+  before_script:
+    - npm config set registry https://registry.npmjs.org/
+    - npm config set //artifactory.cimpress.io/artifactory/api/npm/npm-release-local/:_authToken=$CT_ARTIFACTORY_TOKEN
+    - npm config set //artifactory.cimpress.io/artifactory/api/npm/npm-release-local/:always-auth=true
+    - npm config set @cimpress-technology:registry https://artifactory.cimpress.io/artifactory/api/npm/npm-release-local/
+    - chmod 644 ~/.npmrc
+
+.tags: &tags-common
+  tags:
+    - docker
+    - linux
 
 stages:
+  - init
   - build
   - plan
   - apply
 
-build-job:
-  image: 
-  stage: build
-  script: 
-    - docker build .
+intialise: 
+   image: xueshanf/awscli
+   stage: init
+   script:
+     - export SECRETS_STRING="$(aws secretsmanager get-secret-value --secret-id $AMAROK_ARTIFACTORY_TOKEN_SECRET_ARN --query SecretString --output text --region eu-west-1)"
+     - echo "CT_ARTIFACTORY_TOKEN=$(jq -r '.token' <<<"$SECRETS_STRING")" >> build.env
+   only:
+     - master
+     - merge_requests
+   artifacts:
+     expire_in: 1 week
+     reports:
+       dotenv: build.env
+   tags:
+    - docker
+    - linux
+
+build-stg :
+  <<: *ssh-common
+  <<: *npm_setup
+  <<: *tags-common
+  image: node:14
+  stage : build
+  artifacts :
+    untracked: true 
+    paths :
+      - dist/ 
+    expire_in : 1 week
+  only : 
+    - master
+  script : 
+    - npm -v
+    - echo "checking NODE_ENV value"
+    - echo $NODE_ENV
+    - npm ci
+    - npm run build:stag
+
+
+plan :
+  <<: *ssh-common
+  <<: *tags-common
+  image: registry.gitlab.com/cimpress-technology/ff/infrastructure.ci.cd/modules/ecs-service:1.3.0
+  stage : plan
+  script : 
+    - terraform -v
+    - cd scripts
+    - terraform init
+    - terraform validate
+    - terraform plan
+
+deploy-stg :
+  <<: *ssh-common
+  <<: *tags-common
+  image:
+    name: registry.gitlab.com/cimpress-technology/ff/infrastructure.ci.cd/modules/ecs-service:1.3.0
+  stage : deploy
+  only : 
+    - master
+  script : 
+    - ./scripts/build-image.sh
+    - cd scripts/service-stg
+    - export const TF_VAR_container_version=$CI_COMMIT_SHORT_SHA
+    - export const TF_VAR_newrelic_key=$FF_NEW_RELIC_LICENSE_KEY
+    - terraform init
+    - terraform apply --auto-approve
+
+
