--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:stag": "cp -f src/environments/environment.stg.js src/environments/environment.js && cp package.json dist && cp package-lock.json dist && cd dist && npm ci --ignore-scripts",
+    "build:prod": "cp -f src/environments/environment.prd.js src/environments/environment.js && cp package.json dist && cp package-lock.json dist && cd dist && npm ci --ignore-scripts",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.367.0",
+    "@aws-sdk/client-sqs": "^3.370.0",
     "@aws-sdk/s3-request-presigner": "^3.369.0",
     "@cimpress-technology/pricing-utility": "^1.0.11",
     "axios": "^1.4.0",
