--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 node_modules
 .env
 test.js
+
+# Terraform configuration
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# macOS
+.DS_Store
