--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 # Flow of the pipeline
-# 1. Build stage will build the docker image
-# 2. Run Terraform plan
-# 3. Run Terraform apply.
+# 1. Initialise the required credentials
+# 2. Build stage will build the docker image
+# 3. Run Terraform plan
+# 4. Run Terraform apply.
 
 .ssh: &ssh-common
   before_script:
@@ -35,9 +36,6 @@ intialise:
    script:
      - export SECRETS_STRING="$(aws secretsmanager get-secret-value --secret-id $AMAROK_ARTIFACTORY_TOKEN_SECRET_ARN --query SecretString --output text --region eu-west-1)"
      - echo "CT_ARTIFACTORY_TOKEN=$(jq -r '.token' <<<"$SECRETS_STRING")" >> build.env
-   only:
-     - master
-     - merge_requests
    artifacts:
      expire_in: 1 week
      reports:
@@ -57,8 +55,6 @@ build-stg :
     paths :
       - dist/ 
     expire_in : 1 week
-  only : 
-    - master
   script : 
     - npm -v
     - echo "checking NODE_ENV value"
@@ -67,11 +63,16 @@ build-stg :
     - npm run build:stag
 
 
-plan :
+plan-stg :
   <<: *ssh-common
   <<: *tags-common
   image: registry.gitlab.com/cimpress-technology/ff/infrastructure.ci.cd/modules/ecs-service:1.3.0
   stage : plan
+  artifacts :
+    untracked: true 
+    expire_in : 1 week
+  dependencies:
+    - "build-stg"
   script : 
     - terraform -v
     - cd scripts
@@ -82,11 +83,13 @@ plan :
 deploy-stg :
   <<: *ssh-common
   <<: *tags-common
-  image:
-    name: registry.gitlab.com/cimpress-technology/ff/infrastructure.ci.cd/modules/ecs-service:1.3.0
+  image: registry.gitlab.com/cimpress-technology/ff/infrastructure.ci.cd/modules/ecs-service:1.3.0
   stage : deploy
+  when: manual
   only : 
     - master
+  dependencies:
+    - "plan-stg"
   script : 
     - ./scripts/build-image.sh
     - cd scripts
