--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,6 +94,7 @@ deploy-stg :
   dependencies:
     - "plan-stg"
   script : 
+    - chmod +x scripts/build-image.sh
     - ./scripts/build-image.sh
     - cd scripts
     - export const TF_VAR_container_version=$CI_COMMIT_SHORT_SHA
