--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/s3-request-presigner": "^3.369.0",
     "@cimpress-technology/pricing-utility": "^1.0.11",
     "axios": "^1.4.0",
+    "deep-diff": "^1.0.2",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1"
